# Ray-Tracing-in-Curved-Spacetime

./: CMakeLists.txt
include/: 2D_lensing.hpp  scratch.hpp
kernels/: program.cl
src/: 2D_lensing.cpp  hi.cpp  scratch.cpp
